<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTitle"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtTotalBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtTotalBill"
            android:inputType="numberDecimal"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/txtParty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtParty"
            android:inputType="number"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/txtTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtTip"
            android:inputType="numberDecimal"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btnCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCost"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txtCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtCost"
            android:inputType="numberDecimal"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/pizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pizza" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>